[package]
name = "meshido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = { version = "4.0", default-features = false }
nalgebra = "0.33.0"
simple-logging = "2.0.2"
log = "0.4.22"
bvh = "0.10.0"
